# Embedded_Programming

Amb/Amb/: Amb.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Ambulance/Ambulance/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lamps/Lamps/: Lamps.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Network/Network/: CMakeLists.txt  a.out  main.cpp
fclient/fclient/: CMakeLists.txt  a.out  main.cpp
fserver/fserver/: CMakeLists.txt  a.out  main.cpp
